# bookmarks-rs-2

./: .editorconfig  Cargo.toml  deny.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/data/: Cargo.toml
crates/data/examples/: size.rs
crates/data/src/: lib.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/ui-util/: Cargo.toml
crates/ui-util/examples/: buttons.rs
crates/ui-util/src/: color.rs  lib.rs  tabs.rs  text_button.rs  theme.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
