[package]
name = "bookmark-data"
version = "0.0.0"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
tap = "1.0.1"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "serde", "fast-rng"] }

rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
deepsize = "0.2.0"

[dev-dependencies]
anyhow = "1.0.69"
bytesize = "1.1.0"
clap = { version = "4.1.4", features = ["derive"] }
