[package]
name = "bookmark-ui-util"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
tap = "1.0.1"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "serde", "fast-rng"] }
once_cell = "1.17.0"
derivative = "2.2.0"
paste = "1.0.11"

iced = { version = "0.7.0", features = ["tokio"] }

bookmark-util = { path = "../util" }
